--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="output.css" />
     <title>Portfolio</title>
   </head>
-  <body></body>
+  <body class="bg-red-500">
+    <h1 class="text-violet-400">Hello world</h1>
+  </body>
 </html>
