new file:   src/imgs/ssc1.png 	new file:   src/imgs/ssc2.png 	new file:   src/imgs/ssc3.png 	new file:   src/imgs/ssc4.png 	new file:   src/imgs/ssc5.png 	modified:   src/index.html 	modified:   src/output.css

--- a/src/index.html
+++ b/src/index.html
@@ -67,35 +67,322 @@
       </div>
     </section>
     <section class="skills bg-white p-5">
-      <div class="flex flex-col sm:gap-8 pt-5 px-9 md:grid grid-cols-2 gap-8">
+      <h2 class="text-center text-5xl font-amster m-5 md:m-8 md:text-7xl">
+        These are my Skills.
+      </h2>
+      <div
+        class="flex flex-col sm:gap-8 pt-5 px-9 md:py-7 md:grid grid-cols-2 gap-8 lg:grid-cols-3 lg:grid-rows-2">
         <div
           class="skill h-40 flex flex-col justify-center items-center w-full hover:bg-red-200 ring-2 ring-red-400">
           <h2 class="text-3xl font-amster tracking-widest">Html</h2>
-          <p class="font-mono text-lg">Experience in html</p>
+          <p class="font-mono text-lg md:text-2xl">Experience in html</p>
           <i class="fa-brands fa-html5 text-red-500 text-4xl"></i>
         </div>
         <div
           class="skill h-40 flex flex-col justify-center items-center w-full hover:bg-red-200 ring-2 ring-red-400">
           <h2 class="text-3xl font-amster tracking-widest">CSS</h2>
-          <p class="font-mono text-lg">Experience in <code>CSS</code></p>
+          <p class="font-mono text-lg md:text-2xl">
+            Experience in <code>CSS</code>
+          </p>
           <i class="fa-brands fa-css3-alt text-red-500 text-4xl"></i>
         </div>
         <div
           class="skill h-40 flex flex-col justify-center items-center w-full hover:bg-red-200 ring-2 ring-red-400">
           <h2 class="text-3xl font-amster tracking-widest">Javascript</h2>
-          <p class="font-mono text-lg">Experience in Javascript</p>
+          <p class="font-mono text-lg text-center md:text-2xl">
+            Experience in Javascript
+          </p>
           <i class="fa-brands fa-js text-red-500 text-4xl"></i>
         </div>
         <div
-          class="skill h-40 flex flex-col justify-center items-center w-full hover:bg-red-200 ring-2 ring-red-400">
+          class="skill h-40 flex flex-col justify-center items-center w-full hover:bg-red-200 ring-2 ring-red-400 lg:col-start-2">
           <h2 class="text-3xl font-amster tracking-widest">Figma Ux</h2>
-          <p class="font-mono text-lg">Experience in Figma</p>
+          <p class="font-mono text-lg md:text-2xl">Experience in Figma</p>
           <i class="fa-brands fa-figma text-red-500 text-4xl"></i>
         </div>
       </div>
     </section>
-    <section class="projects"></section>
-    <section class="form"></section>
-    <section class="footer"></section>
+    <section class="projects p-8 m-6">
+      <h2
+        class="text-left text-5xl font-amster m-5 md:m-8 md:text-7xl lg:text-center">
+        These are some of the Projects that I've worked on.
+      </h2>
+      <div
+        class="flex flex-col sm:gap-8 pt-5 md:grid grid-cols-2 gap-8 lg:grid-cols-4 lg:grid-rows-2">
+        <div
+          class="max-w-sm bg-white border border-black rounded-lg shadow dark:bg-gray-80dark:border-gray-700">
+          <a href="#">
+            <img class="rounded-t-lg" src="imgs/ssc1.png" alt="" />
+          </a>
+          <div class="p-5">
+            <a href="#">
+              <h5 class="mb-2 text-2xl font-bold tracking-tight text-black">
+                A mock portfolio for my first project.
+              </h5>
+            </a>
+            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+              Here are the biggest enterprise technology acquisitions of 2021 so
+              far, in reverse chronological order.
+            </p>
+            <a
+              href="#"
+              class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-black bg-red-200 rounded-lg border border-black">
+              Visit The Project
+              <svg
+                class="rtl:rotate-180 w-3.5 h-3.5 ms-2"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 14 10">
+                <path
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M1 5h12m0 0L9 1m4 4L9 9" />
+              </svg>
+            </a>
+          </div>
+        </div>
+        <div class="bg-white rounded-lg shadow">
+          <a href="#">
+            <img class="rounded-t-lg" src="imgs/ssc2.png" alt="" />
+          </a>
+          <div class="p-5">
+            <a href="#">
+              <h5 class="mb-2 text-2xl font-bold tracking-tight text-black">
+                A mock Watch Website.
+              </h5>
+            </a>
+            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+              Here are the biggest enterprise technology acquisitions of 2021 so
+              far, in reverse chronological order.
+            </p>
+            <a
+              href="#"
+              class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-black bg-red-200 rounded-lg border border-black">
+              Visit The Project
+              <svg
+                class="rtl:rotate-180 w-3.5 h-3.5 ms-2"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 14 10">
+                <path
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M1 5h12m0 0L9 1m4 4L9 9" />
+              </svg>
+            </a>
+          </div>
+        </div>
+        <div class="max-w-sm bg-white rounded-lg shadow">
+          <a href="#">
+            <img class="rounded-t-lg" src="imgs/ssc3.png" alt="" />
+          </a>
+          <div class="p-5">
+            <a href="#">
+              <h5 class="mb-2 text-2xl font-bold tracking-tight text-black">
+                A mock Travel Website.
+              </h5>
+            </a>
+            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+              Here are the biggest enterprise technology acquisitions of 2021 so
+              far, in reverse chronological order.
+            </p>
+            <a
+              href="#"
+              class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-black bg-red-200 rounded-lg border border-black">
+              Visit The Project
+              <svg
+                class="rtl:rotate-180 w-3.5 h-3.5 ms-2"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 14 10">
+                <path
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M1 5h12m0 0L9 1m4 4L9 9" />
+              </svg>
+            </a>
+          </div>
+        </div>
+        <div class="max-w-sm bg-white rounded-lg shadow">
+          <a href="#">
+            <img class="rounded-t-lg" src="imgs/ssc4.png" alt="" />
+          </a>
+          <div class="p-5">
+            <a href="#">
+              <h5 class="mb-2 text-2xl font-bold tracking-tight text-black">
+                A Mock website testing my Tailwind skills.
+              </h5>
+            </a>
+            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+              Here are the biggest enterprise technology acquisitions of 2021 so
+              far, in reverse chronological order.
+            </p>
+            <a
+              href="#"
+              class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-black bg-red-200 rounded-lg border border-black">
+              Visit The Project
+              <svg
+                class="rtl:rotate-180 w-3.5 h-3.5 ms-2"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 14 10">
+                <path
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M1 5h12m0 0L9 1m4 4L9 9" />
+              </svg>
+            </a>
+          </div>
+        </div>
+        <div class="w-full bg-white rounded-lg shadow md:self-center">
+          <a href="#">
+            <img class="rounded-t-lg" src="imgs/ssc5.png" alt="" />
+          </a>
+          <div class="p-5">
+            <a href="#">
+              <h5 class="mb-2 text-2xl font-bold tracking-tight text-black">
+                A mock Website testing my Flexbox skills.
+              </h5>
+            </a>
+            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+              Here are the biggest enterprise technology acquisitions of 2021 so
+              far, in reverse chronological order.
+            </p>
+            <a
+              href="#"
+              class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-black bg-red-200 rounded-lg border border-black">
+              Visit The Project
+              <svg
+                class="rtl:rotate-180 w-3.5 h-3.5 ms-2"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 14 10">
+                <path
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M1 5h12m0 0L9 1m4 4L9 9" />
+              </svg>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="form bg-white p-8">
+      <h2 class="text-5xl font-amster text-center m-5 md:m-8 md:text-7xl">
+        Leave Your Contact info
+      </h2>
+      <div class="m-10 p-8 bg-white border border-red-500 rounded-lg">
+        <label
+          for="input-group-1"
+          class="block mb-2 text-sm font-medium text-black"
+          >Your Email</label
+        >
+        <div class="relative mb-6">
+          <div
+            class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
+            <svg
+              class="w-4 h-4 text-gray-500 dark:text-gray-400"
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="currentColor"
+              viewBox="0 0 20 16">
+              <path
+                d="m10.036 8.278 9.258-7.79A1.979 1.979 0 0 0 18 0H2A1.987 1.987 0 0 0 .641.541l9.395 7.737Z" />
+              <path
+                d="M11.241 9.817c-.36.275-.801.425-1.255.427-.428 0-.845-.138-1.187-.395L0 2.6V14a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V2.5l-8.759 7.317Z" />
+            </svg>
+          </div>
+          <input
+            type="text"
+            id="input-group-1"
+            class="bg-gray-50 border border-black text-gray-900 text-sm rounded-lg focus:ring-red-500 focus:border-red-500 block w-full ps-10 p-2.5"
+            placeholder="name@gmail.com" />
+        </div>
+        <label
+          for="website-admin"
+          class="block mb-2 text-sm font-medium text-black"
+          >Your Name</label
+        >
+        <div class="flex">
+          <span
+            class="inline-flex items-center px-3 text-sm text-gray-900 bg-white border rounded-e-0 border-black border-e-0 rounded-s-md">
+            <svg
+              class="w-4 h-4 text-gray-500 dark:text-gray-400"
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="currentColor"
+              viewBox="0 0 20 20">
+              <path
+                d="M10 0a10 10 0 1 0 10 10A10.011 10.011 0 0 0 10 0Zm0 5a3 3 0 1 1 0 6 3 3 0 0 1 0-6Zm0 13a8.949 8.949 0 0 1-4.951-1.488A3.987 3.987 0 0 1 9 13h2a3.987 3.987 0 0 1 3.951 3.512A8.949 8.949 0 0 1 10 18Z" />
+            </svg>
+          </span>
+          <input
+            type="text"
+            id="website-admin"
+            class="rounded-none rounded-e-lg bg-gray-50 border text-gray-900 block flex-1 min-w-0 w-full text-sm border-black p-2.5"
+            placeholder="Name" />
+        </div>
+        <label for="message" class="block mt-2 text-sm font-medium text-black"
+          >Your message :</label
+        >
+        <div class="flex mt-5">
+          <textarea
+            id="message"
+            rows="4"
+            class="block p-2.5 w-full text-sm text-gray-900 border border-black bg-gray-50 rounded-lg"
+            placeholder="leave me a message here...."></textarea>
+        </div>
+      </div>
+    </section>
+    <section class="footer text-black">
+      <footer class="bg-red-500 rounded-lg shadow m-4">
+        <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
+          <div class="sm:flex sm:items-center sm:justify-between">
+            <a
+              href="https://flowbite.com/"
+              class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
+              <span
+                class="self-center text-lg md:text-5xl tracking-wide font-bold whitespace-nowrap text-white font-amster"
+                >Yahya</span
+              >
+            </a>
+            <ul
+              class="flex flex-wrap items-center mb-6 text-sm md:text-2xl font-medium font-amster text-white sm:mb-0">
+              <li>
+                <a href="#" class="hover:underline me-4 md:me-6">Home</a>
+              </li>
+              <li>
+                <a href="#" class="hover:underline me-4 md:me-6">Projects</a>
+              </li>
+              <li>
+                <a href="#" class="hover:underline">Contact</a>
+              </li>
+            </ul>
+          </div>
+          <hr
+            class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
+          <span class="block text-sm text-white sm:text-center"
+            >© 2023
+            <a href="https://flowbite.com/" class="hover:underline">Flowbite™</a
+            >. All Rights Reserved.</span
+          >
+        </div>
+      </footer>
+    </section>
   </body>
 </html>
