--- a/src/index.html
+++ b/src/index.html
@@ -334,7 +334,7 @@
           <input
             type="text"
             id="website-admin"
-            class="rounded-none rounded-e-lg bg-gray-50 border text-gray-900 block flex-1 min-w-0 w-full text-sm border-black p-2.5"
+            class="rounded-none rounded-e-lg bg-gray-50 border text-gray-900 block md:w-10[80%] flex-1 text-sm border-black p-2.5"
             placeholder="Name" />
         </div>
         <label for="message" class="block mt-2 text-sm font-medium text-black"
@@ -358,7 +358,7 @@
               class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
               <span
                 class="self-center text-lg md:text-5xl tracking-wide font-bold whitespace-nowrap text-white font-amster"
-                >Yahya</span
+                >Yahya.</span
               >
             </a>
             <ul
@@ -377,9 +377,8 @@
           <hr
             class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
           <span class="block text-sm text-white sm:text-center"
-            >© 2023
-            <a href="https://flowbite.com/" class="hover:underline">Flowbite™</a
-            >. All Rights Reserved.</span
+            >© 2023 <a href="#" class="hover:underline">Yahya™</a>. All Rights
+            Reserved.</span
           >
         </div>
       </footer>
